style(Implemented code review comments on code format): Implemented code review comments
Implemented provided code review comments on code format and typo

Incoprated code review comments

--- a/src/main/resources/org/sonar/l10n/java/rules/squid/HybrisControllerHtmlUsageCheck_java.html
+++ b/src/main/resources/org/sonar/l10n/java/rules/squid/HybrisControllerHtmlUsageCheck_java.html
@@ -4,7 +4,7 @@
 @Controller
 public clall HtmlUsageTestSampleController {
 	String nonCompliantMethod() {
-        return "<html><body></body></html>"; // Noncompliant {{Refactor Controller to nor use html tags directly and let view template define the tags}}
+        return "<html><body></body></html>"; // Noncompliant {{Refactor Controller to not use html tags directly and let view template define the tags}}
     }
 }    
 </pre>
